language/move-lang/tests/move_check/expansion/standalone_name_with_type_args.exp
error: 

   ┌── tests/move_check/expansion/standalone_name_with_type_args.move:3:18 ───
   │
 3 │         let _ = n<u64>;
   │                       ^ Unexpected token: ';'
   ·
 3 │         let _ = n<u64>;
   │                       - Expected: '{', '('
   ·
 3 │         let _ = n<u64>;
   │                  - Perhaps you need a blank space before this '<' operator?
   │

